# Ethiviz

./: .gitignore  README.md  STREAMLIT_GUIDE.md  requirements.txt  start_ethiviz.sh  start_services.sh
Ethiviz_V4/: .gitignore  README.md  ethiviz_build_prompt_v4.md  pyproject.toml  run_platform.py  start.sh
Ethiviz_V4/ethiviz/: __init__.py  api.py  server.py
Ethiviz_V4/ethiviz/analysis/: cultural_inclusion.py  demographics.py  dignity.py  dual_framework.py  image_analysis.py  intersectional.py  recommendations.py  ubuntu_metrics.py  weat.py
Ethiviz_V4/ethiviz/context/: deployment.py  regulatory.py  weights.py
Ethiviz_V4/ethiviz/detection/: base.py  image.py  multimodal.py  text.py
Ethiviz_V4/ethiviz/embeddings/: language_detection.py  model.py  prototype_learner.py  prototype_store.py  semantic_detector.py
Ethiviz_V4/ethiviz/evaluation/: __init__.py  structured_dataset.py
Ethiviz_V4/ethiviz/frameworks/: base.py  conflict.py  loader.py  versioning.py
Ethiviz_V4/ethiviz/integration/: __init__.py  sklearn_api.py
Ethiviz_V4/ethiviz/lenses/: base.py  buddhist.py  confucian.py  hindu.py  indigenous.py  islamic.py  ubuntu.py  western.py
Ethiviz_V4/ethiviz/metrics/: __init__.py  group_fairness.py  individual_fairness.py
Ethiviz_V4/ethiviz/mitigation/: __init__.py  inprocessing.py  postprocessing.py  preprocessing.py
Ethiviz_V4/ethiviz/reporting/: base.py  explainability.py  html_report.py  mitigation.py  provenance.py
Ethiviz_V4/ethiviz/sample_data/: sample_texts_buddhist.csv  sample_texts_confucian.csv  sample_texts_hindu.csv  sample_texts_indigenous.csv  sample_texts_islamic.csv  (+2 more)
Ethiviz_V4/examples/: text_analysis.py
Ethiviz_V4/tests/: conftest.py  test_smoke.py  test_v4_upgrades.py  test_v5_tier4.py
(+98 files in other folders)
