[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethiviz"
version = "0.5.0"
description = "Cross-cultural AI bias detection through seven ethical lenses with AIF360-parity fairness metrics and mitigation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["bias", "fairness", "ai-ethics", "cross-cultural", "ubuntu", "confucian",
            "islamic", "weat", "intersectional", "decolonize-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.4",
    "scikit-learn>=1.3",
    "jinja2>=3.1",
    "scipy>=1.11",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2"]
vision = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "transformers>=4.35",
    "torch>=2.0",
]
explainability = ["lime>=0.2", "shap>=0.44"]
multilingual = ["langdetect>=1.0", "jieba>=0.42", "stanza>=1.7"]
calibration = []                            # uses scikit-learn from core deps
batch = ["tqdm>=4.65"]
aif360 = ["aif360>=0.6"]
fairlearn = ["fairlearn>=0.9"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "black>=23.7",
    "ruff>=0.1",
    "mypy>=1.5",
]
full = [
    "ethiviz[semantic,vision,explainability,multilingual,batch,aif360,fairlearn]"
]

[tool.pytest.ini_options]
addopts = "-p no:langsmith"
testpaths = ["tests"]
